--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "prettier": "prettier . --ext ts,tsx --check",
     "prettier:fix": "npm run prettier -- --write",
     "format": "npm run prettier:fix && npm run lint:fix",
-    "prepare": "husky && husky install"
+    "prepare": "cd .. && husky install frontend/.husky"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
